--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             {% for strat in strats %}
-                                <li><a href="#" onclick="setFilterValue('btn-filter-strategy', this.innerHTML)">{{ strat }}</a></li>                                
+                                <li><a href="#" class="button-filter-strategy-option" onclick="setFilterValue('btn-filter-strategy', this.innerHTML)" style="display: block;">{{ strat }}</a></li>                                
                             {% endfor %}
                         </ul>
                     </div>
@@ -57,7 +57,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             {% for ticker in tickers %}
-                                <li><a href="#" onclick="setFilterValue('btn-filter-ticker', this.innerHTML)">{{ ticker }}</a></li>                                
+                                <li><a href="#" class="button-filter-ticker-option" onclick="setFilterValue('btn-filter-ticker', this.innerHTML)" style="display: block;">{{ ticker }}</a></li>                                
                             {% endfor %}
                         </ul>
                     </div>
@@ -73,7 +73,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             {% for year in years %}
-                                <li><a href="#" onclick="setFilterValue('btn-filter-year', this.innerHTML)">{{ year }}</a></li>                                
+                                <li><a href="#" class="button-filter-year-option" onclick="setFilterValue('btn-filter-year', this.innerHTML)" style="display: block;">{{ year }}</a></li>                                
                             {% endfor %}
                         </ul>
                     </div>
