Added Unbalanced Butterfly Put and Iron Condor to list of strategies

--- a/app/templates/subTradeForm.html
+++ b/app/templates/subTradeForm.html
@@ -28,7 +28,9 @@
                         <option value="Calendar Put Spread"></option>
                         <option value="Diagonal Spread"></option>
                         <option value="Diagonal Spread (PMCC)"></option>
+                        <option value="Unbalanced Butterfly Put"></option>
                         <option value="Double Calendar Spread"></option>
+                        <option value="Iron Condor"></option>
                     </datalist>
                     {% for error in form.strategy.errors %}
                         <span style="color: red;">[{{ error }}]</span>
